--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "start": "NODE_PATH=src node src/main.js",
+    "start": "NODE_PATH=src node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "minuette": "./bin/minuette.js"
   },
   "repository": {
     "type": "git",
