--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "NODE_PATH=src node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_PATH=src tape test/**/*.test.js | tap-diff"
   },
   "bin": {
     "minuette": "./bin/minuette.js"
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/Avalander/Minuette#readme",
   "dependencies": {
     "chalk": "^2.4.2"
+  },
+  "devDependencies": {
+    "tap-diff": "^0.1.1",
+    "tape": "^4.11.0"
   }
 }
